# ImageProcessing

./: CMakeLists.txt  Image.cc  imageapp.cc  main.cc  mainwindow.cc
UI/: main_container.xml  menubar.xml
include/: Image.h  imageapp.h  mainwindow.h
